
Continouos->reset time trigger time measure

15-02-10 Added animation controller dialog (in progress)
[3h]	 Updated texture demo
		 Added experimental/QuaternionMandelbrot4D.frag
		 GPU/CPU benchmark (in progress)

02-02-10 Tilebased render dialog added.
[3h]	 SpotLight is now always on camera-oriented hemisphere (and expressed in spherical coords as a vec2)
		 Added support for 2D sliders in GUI.
		 Update DE-raytracer: new background vignette, better normal estimation.

27-01-10 Added a 'preview' slider to toolbar (in progress)
[3h]	 Refactored DE-raytracer in order to separate color and lighting.
		 Now clamps colors after anti-aliased (to prevent killing specular highlights).


25-01-10 Added prototype for tilebased render (currently tiles are fixed to 3x3)
[3h]	 Added context menu with clear and copy to clipboard to log.
		 Fixed a bug causing resizeGL to crash on some (probably broken) Linux drivers.
		 Added a 'debanding' term to DE-raytracer.
		 Added a 3 second time-out to splash-screen.
		 
Release of Fragmentarium 0.5.6 [57h]

20-01-10 Updated all GLSL examples to avoid calling functions in global variable initializers (this did not work on ATI drivers)
[2h]	 Cleaned up examples a bit.

19-01-10 Write out Camera hints after rendering
[2h]	 Removed 'debug' preference option -> now a menu item.
		 New splash
		 Mandelbulb is now default frag

17-01-10 Make screenshot
[2h]	 Updated 3D raytracer

16-01-10 Now showing the line number for preprocessed scripts making debugging much easier
[2h]	 Removed QFile pointer madness
		 Added Julia option to Mandelbrots
		 Added "linear clarity" to DE-raytracer	
		 Added smoother gradient background


15-01-10 Updated Orbit traps (now distance to three coordinate planes and origin)
[1h]

14-01-10 Fixed linux compilation errors and warning (untested).
[2h]	 Fixed registry settings bug (include path not read before opening preferences first time).
		 Fixed unconnected reset() signal.