@@ -1,0 +1,14 @@
+#pragma once
+
+#include <QString>
+#include <QList>
+#include <QWidget>
+
+
+namespace SyntopiaCore {
+	namespace Misc {	
+		QString GetImageFileName(QWidget* parent, QString label);
+	}
+}
+
+
